# Projeto_Final_RSDIS

./: .gitignore  .gitmodules  README.md
Data_Plotter/: dataPlotter.py
Data_Plotter/Line_lap_logs/: line_laps.csv
Data_Plotter/laps_stats/: lap_001_1761865578_674155667.csv  lap_002_1761865601_954268322.csv  lap_003_1761865625_114129879.csv  lap_004_1761865648_114257242.csv  lap_005_1761865671_474132021.csv  lap_006_1761865694_914189024.csv
Data_Plotter/laps_stats_v2/: lap_001_1761866416_849765385.csv  lap_002_1761866440_169753946.csv  lap_003_1761866463_090194289.csv  lap_004_1761866485_649864983.csv  lap_005_1761866508_889752047.csv  lap_006_1761866531_689709574.csv  lap_007_1761866555_649756882.csv
catkin_ws/log/: latest_list
catkin_ws/src/error_management/: CMakeLists.txt  package.xml
catkin_ws/src/error_management/src/: error_management_node.cpp
catkin_ws/src/image_processing/: CMakeLists.txt  package.xml
catkin_ws/src/image_processing/src/: image_processing_node.cpp
catkin_ws/src/line_statistics/: CMakeLists.txt  package.xml
catkin_ws/src/line_statistics/src/: statistics_node.cpp
catkin_ws/src/motor_control/: CMakeLists.txt  package.xml
catkin_ws/src/motor_control/src/: motor_control_node.cpp
catkin_ws/src/rgb_detector/: CMakeLists.txt  package.xml
catkin_ws/src/rgb_detector/src/: rgb_detector_node.cpp
catkin_ws/src/rgb_management/: CMakeLists.txt  package.xml
catkin_ws/src/rgb_management/src/: rgb_management_node.cpp
catkin_ws/src/system_launch/: CMakeLists.txt  package.xml
catkin_ws/src/system_launch/launch/: line_follower_full.launch  line_follower_no_motor.launch  line_follower_teleop.launch
catkin_ws/src/teleop/: CMakeLists.txt  package.xml
catkin_ws/src/teleop/src/: teleop_node.cpp
