<?xml version="1.0"?>
<package format="2">
  <name>line_statistics</name>
  <version>0.0.1</version>
  <description>Runtime statistics for the line follower stack.</description>

  <maintainer email="1231491@isep.ipp.pt">Rodrigo Oliveira</maintainer>
  <maintainer email="1220892@isep.ipp.pt">Bruno Moreira</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export/>
</package>
