<?xml version="1.0"?>
<package format="2">
  <name>system_launch</name>
  <version>0.0.0</version>
  <description>Launch files that compose the system nodes.</description>

  <maintainer email="lsa@lsa.lsa">lsa</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>raspicam_node</exec_depend>
  <exec_depend>motor_control</exec_depend>
  

  <export/>
</package>
