<?xml version="1.0"?>
<package format="2">
  <name>system_launch</name>
  <version>0.0.0</version>
  <description>Launch files that compose the system nodes.</description>

  <maintainer email="1231491@isep.ipp.pt">Rodrigo Oliveira</maintainer>
  <maintainer email="1220892@isep.ipp.pt">Bruno Moreira</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>raspicam_node</exec_depend>
  <exec_depend>motor_control</exec_depend>
  

  <export/>
</package>
